2003-04-27 Andreas Pohl <osar@users.sourceforge.net>
	* initial import