@@ -1,2 +1,10 @@
+2003-11-15 Andreas Pohl <osar@users.sourceforge.net>
+	* added TimeZoneInformation, rra_get_time_zone_information
+	* added rra_partner_replace, rra_partner_create
+	* added synce_log_set_level
+	* changed rra_appointment_to_vevent, rra_appointment_from_vevent,
+	    rra_task_to_vtodo, rra_task_from_vtodo
+	* changed Makefile.PL
+	
 2003-04-27 Andreas Pohl <osar@users.sourceforge.net>
 	* initial import
